@@ -2,6 +2,9 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- syslinux changes: microfs used for mfsroot, then chroot the FAT32 mount
+  (experimental, symlinks won't work on FAT32 with freebsd needs fixing etc)
+  
 - fixup buildscripts and pfkey patch (whitespaces yet again)
 
 - fixup crypto display in index.php and setkey patch for whitespaces, add
